sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value i
	i=0;
        ^AlgBubbleSort1:6: error: not found: value i
		echange(i,i+1);
                        ^AlgBubbleSort1:8: error: not found: value i
		i=i+1;
                ^AlgBubbleSort1:9: error: not found: value i
	} while(i<=9 && ant==true)
                ^