sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var ant:Boolean=false;
	i=0;
	do {
		echange(i,i+1);
		ant=true;
		i=i+1;
	} while(i<=9 && ant==true)
}
